[project]
name = "polars-dbn"
version = "0.1.0"
description = "Polars IO plugin for reading the Databento Binary Encoding (DBN) format."
readme = "README.md"
authors = [
    { name = "Noah Lowry" }
]
requires-python = ">=3.14"
dependencies = [
    "databento>=0.75.0",
    "databento-dbn>=0.53.0",
    "numpy>=2.4.4",
    "polars>=1.40.0",
    "pyarrow>=24.0.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
